--- a/Corrente/appsettings.json
+++ b/Corrente/appsettings.json
@@ -4,5 +4,8 @@
       "Default": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "CorrenteContext": "Server=(localdb)\\mssqllocaldb;Database=CorrenteContext-92a8e825-b76b-4e32-923f-7d7112ee15a9;Trusted_Connection=True;MultipleActiveResultSets=true"
+  }
 }
