MySQL adaptation and first migration

--- a/Corrente/appsettings.json
+++ b/Corrente/appsettings.json
@@ -6,6 +6,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "CorrenteContext": "Server=(localdb)\\mssqllocaldb;Database=CorrenteContext-92a8e825-b76b-4e32-923f-7d7112ee15a9;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "CorrenteContext": "server=localhost;userid=developer;password=1234567;database=dbcorrente"
   }
 }
